// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Component] FFCardSimple renders correctly but with fallback image 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
        "marginBottom": 10,
      },
      undefined,
      Object {
        "alignItems": "center",
        "flex": 1,
      },
    ]
  }
  testID="SimpleFFCard"
>
  <View
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 4,
        "elevation": 1,
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 0.5,
          "width": 0,
        },
        "shadowOpacity": 0.24,
        "shadowRadius": 0.75,
      }
    }
  >
    <View
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flexGrow": 1,
          "flexShrink": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingHorizontal": 16,
            },
            Object {
              "paddingVertical": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "maxWidth": 350,
              "width": 700,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Array [
                  Object {
                    "borderRadius": 10,
                    "borderWidth": 1,
                    "elevation": 5,
                    "height": 255,
                    "width": 182.14285714285717,
                  },
                  undefined,
                  Object {
                    "elevation": 0,
                    "height": 210,
                    "width": 150,
                  },
                ],
              ]
            }
          >
            <FastImageView
              onFastImageError={[Function]}
              resizeMode="cover"
              source={
                Object {
                  "uri": "https://fftcg.cdn.sewest.net/images/cards/full/1-001H_eg.jpg",
                }
              }
              style={
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
              testID="detail-Image-1-001H"
            />
          </View>
          <View
            style={
              Array [
                Object {
                  "flex": 1,
                  "marginLeft": 10,
                },
              ]
            }
          >
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "System",
                    "fontWeight": "400",
                    "textAlign": "left",
                  },
                  Object {
                    "fontSize": 13,
                  },
                ]
              }
            >
              1-001H
               
              Boulou
            </Text>
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "System",
                    "fontWeight": "400",
                    "textAlign": "left",
                  },
                  Object {
                    "fontSize": 13,
                  },
                ]
              }
            >
              blue
               
              
            </Text>
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "System",
                    "fontWeight": "400",
                    "textAlign": "left",
                  },
                  Object {
                    "fontSize": 13,
                  },
                ]
              }
            >
              Soutien
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "System",
                    "fontWeight": "400",
                    "textAlign": "left",
                  },
                  Object {
                    "fontSize": 13,
                  },
                ]
              }
            />
            <Text
              numberOfLines={6}
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "System",
                    "fontWeight": "400",
                    "textAlign": "left",
                  },
                  Array [
                    Object {
                      "flex": 1,
                    },
                    Object {
                      "fontSize": 13,
                    },
                  ],
                ]
              }
            >
              billy 
              <Image
                source="test-file-stub"
                style={
                  Array [
                    Object {
                      "height": 16,
                      "width": 16,
                    },
                    Object {},
                  ]
                }
              />
              
              <Text
                style={
                  Array [
                    Object {},
                  ]
                }
              >
                ❶
              </Text>
              
              <Image
                source="test-file-stub"
                style={
                  Array [
                    Object {
                      "height": 16,
                      "width": 16,
                    },
                    Object {},
                  ]
                }
              />
              
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`[Component] FFCardSimple renders correctly in grid view 1`] = `
<View
  style={
    Array [
      Object {},
      undefined,
      Object {
        "alignItems": "center",
        "flex": 1,
      },
    ]
  }
  testID="SimpleFFCard"
>
  <View
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Array [
            Object {
              "borderRadius": 10,
              "borderWidth": 1,
              "elevation": 5,
              "height": 255,
              "width": 182.14285714285717,
            },
            undefined,
          ],
        ]
      }
    >
      <FastImageView
        onFastImageError={[Function]}
        resizeMode="cover"
        source={
          Object {
            "uri": "https://fftcg.cdn.sewest.net/images/cards/full/1-001H_fr.jpg",
          }
        }
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        testID="single-Image-1-001H"
      />
    </View>
  </View>
</View>
`;

exports[`[Component] FFCardSimple renders correctly in list view 1`] = `
<View
  style={
    Array [
      Object {},
      undefined,
      Object {
        "alignItems": "center",
        "flex": 1,
      },
    ]
  }
  testID="SimpleFFCard"
>
  <View
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Array [
            Object {
              "borderRadius": 10,
              "borderWidth": 1,
              "elevation": 5,
              "height": 255,
              "width": 182.14285714285717,
            },
            undefined,
          ],
        ]
      }
    >
      <FastImageView
        onFastImageError={[Function]}
        resizeMode="cover"
        source={
          Object {
            "uri": "https://fftcg.cdn.sewest.net/images/cards/full/1-001H_fr.jpg",
          }
        }
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        testID="simple-Image-1-001H"
      />
    </View>
  </View>
</View>
`;

exports[`[Component] FFCardSimple renders correctly with twice callback 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
        "marginBottom": 10,
      },
      undefined,
      Object {
        "alignItems": "center",
        "flex": 1,
      },
    ]
  }
  testID="SimpleFFCard"
>
  <View
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 4,
        "elevation": 1,
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 0.5,
          "width": 0,
        },
        "shadowOpacity": 0.24,
        "shadowRadius": 0.75,
      }
    }
  >
    <View
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flexGrow": 1,
          "flexShrink": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingHorizontal": 16,
            },
            Object {
              "paddingVertical": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "maxWidth": 350,
              "width": 700,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Array [
                  Object {
                    "borderRadius": 10,
                    "borderWidth": 1,
                    "elevation": 5,
                    "height": 255,
                    "width": 182.14285714285717,
                  },
                  undefined,
                  Object {
                    "elevation": 0,
                    "height": 210,
                    "width": 150,
                  },
                ],
              ]
            }
          >
            <FastImageView
              onFastImageError={[Function]}
              resizeMode="cover"
              source={
                Object {
                  "uri": "https://fftcg.cdn.sewest.net/images/cards/full/1-001H_eg.jpg",
                }
              }
              style={
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
              testID="detail-Image-1-001H"
            />
          </View>
          <View
            style={
              Array [
                Object {
                  "flex": 1,
                  "marginLeft": 10,
                },
              ]
            }
          >
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "System",
                    "fontWeight": "400",
                    "textAlign": "left",
                  },
                  Object {
                    "fontSize": 13,
                  },
                ]
              }
            >
              1-001H
               
              Boulou
            </Text>
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "System",
                    "fontWeight": "400",
                    "textAlign": "left",
                  },
                  Object {
                    "fontSize": 13,
                  },
                ]
              }
            >
              blue
               
              
            </Text>
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "System",
                    "fontWeight": "400",
                    "textAlign": "left",
                  },
                  Object {
                    "fontSize": 13,
                  },
                ]
              }
            >
              Soutien
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "System",
                    "fontWeight": "400",
                    "textAlign": "left",
                  },
                  Object {
                    "fontSize": 13,
                  },
                ]
              }
            />
            <Text
              numberOfLines={6}
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "System",
                    "fontWeight": "400",
                    "textAlign": "left",
                  },
                  Array [
                    Object {
                      "flex": 1,
                    },
                    Object {
                      "fontSize": 13,
                    },
                  ],
                ]
              }
            >
              billy 
              <Image
                source="test-file-stub"
                style={
                  Array [
                    Object {
                      "height": 16,
                      "width": 16,
                    },
                    Object {},
                  ]
                }
              />
              
              <Text
                style={
                  Array [
                    Object {},
                  ]
                }
              >
                ❶
              </Text>
              
              <Image
                source="test-file-stub"
                style={
                  Array [
                    Object {
                      "height": 16,
                      "width": 16,
                    },
                    Object {},
                  ]
                }
              />
              
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
